app/assets/stylesheets/application.css.scss
/*
 * This is a manifest file that'll be compiled into application.css, which will include all the files
 * listed below.
 *
 * Any CSS and SCSS file within this directory, lib/assets/stylesheets, vendor/assets/stylesheets,
 * or any plugin's vendor/assets/stylesheets directory can be referenced here using a relative path.
 *
 * You're free to add application-wide styles to this file and they'll appear at the bottom of the
 * compiled file so the styles you add here take precedence over styles defined in any styles
 * defined in the other CSS/SCSS files in this directory. It is generally better to create a new
 * file per style scope.
 *
 *= require_tree ../../../vendor/assets/stylesheets/.
 *= require_tree .
 *= require_self
 //= depend_on_asset "bootstrap/glyphicons-halflings-regular.eot"
 //= depend_on_asset "bootstrap/glyphicons-halflings-regular.woff"
 //= depend_on_asset "bootstrap/glyphicons-halflings-regular.ttf"
 //= depend_on_asset "bootstrap/glyphicons-halflings-regular.svg"
 */
@import url(http://fonts.googleapis.com/css?family=Gudea);
@import "bootstrap-sprockets";
@import "bootstrap";



/* Some Style from the Bootstrap Default Theme */


body {
  padding-bottom: 30px;
  padding-left: 2%;
  padding-right: 2%;
  font-family: "Gudea", serif;
  // opacity: 0.6;
  background: url(http://protiumdesign.com/wp-content/uploads/2014/07/Network-Connection-1024.jpg) no-repeat center center fixed;
  -webkit-background-size: cover;
  -moz-background-size: cover;
  -o-background-size: cover;
  background-size: cover;
  font-size: 14px;
}

nav {
  padding-right: 2%;
  margin-left: -2%;
  margin-right: -2%;
  background: rgba(255,255,255, 0.5);
}

.jumbotron {
  position: relative;
  text-align: center;
  background: rgba(255,255,255, 0.0);
}

.jumbotron#form {
  padding-top: 20px;
}

.btn-lg {
  border: none;
}

td {
  padding: 10px;
}

table {
  border: #f8f8f8;
  border-radius: 4px;
  background-color: rgba(255,255,255, 0.5);
}

.container-fluid {
  padding-left: 0px;
}

#details {
  padding-left: 0px;
  padding-right: 30px;
}

#teams {
  text-align: center;
}

#create-teams-button {
  margin-top: 20px;
}

#map-div {
  padding: 2%;
}

.theme-dropdown .dropdown-menu {
  position: static;
  display: block;
  margin-bottom: 20px;
}

.theme-showcase > p > .btn {
  margin: 5px 0;
}

li {
  list-style-type: none;
}

.field > input[type="email"], input[type="password"], input[type="text"], input[type="date"], input[type="number"] {
 border-radius: 4px;
 border: 0px;
 width: 30%;
 margin-top: 1%;
 margin-bottom: 1%;
 height: 30px;
}

.form > textarea[id="hackathon_description"], textarea[id="description"] {
  border-radius: 4px;
  border: 0px;
  width: 30%;
  margin-top: 1%;
  margin-bottom: 1%;
  height: 60px;
}

